--- a/tarefas/templates/tarefas/tarefas_form.html
+++ b/tarefas/templates/tarefas/tarefas_form.html
@@ -3,9 +3,9 @@
 
 {% block page_title %}
     {% if tarefas.pk %}
-        LT - Editar Tarefas
+        Editar Tarefas
     {% else %}
-        LT - Criar Tarefa
+        Criar Tarefa
     {% endif %}
 {% endblock page_title%}
 
