--- a/tarefas/templates/tarefas/tarefas_list.html
+++ b/tarefas/templates/tarefas/tarefas_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block page_title %}
-    Lista tarefas
+    Tarefas
 {% endblock page_title%}
 
 {% block content %}
