--- a/tarefas/templates/base.html
+++ b/tarefas/templates/base.html
@@ -10,7 +10,7 @@
 
         <!-- icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <title>{% block page_title %}{% endblock page_title%}</title>
+        <title>LT - {% block page_title %}{% endblock page_title%}</title>
     </head>
     <body>
         <nav class="navbar navbar-light bg-black mb-3" style="background-color: #999;">
